k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keresifon
  labels:
    app: keresifon
spec:
  type: ClusterIP
  selector:
    app: keresifon
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
